2002-06-19  Kenneth Kocienda  <kocienda@apple.com>

        I just played alchemical voodoo games with the linker to
        make all our frameworks and Alexander prebound.

	* WebKit.pbproj/project.pbxproj

2002-06-18  Chris Blumenberg  <cblu@apple.com>

	Fix for 2961733 - Progress of plug-in files not shown in activity window
	Plugin classed must call _IF_superviewWithName: not _IF_parentWebView

	* Plugins.subproj/IFNullPluginView.mm:
	(-[IFNullPluginView drawRect:]):
	* Plugins.subproj/IFPluginStream.mm: minor cleanup
	(-[IFPluginStream IFURLHandle:resourceDataDidBecomeAvailable:]):
	(-[IFPluginStream IFURLHandleResourceDidFinishLoading:data:]):
	(-[IFPluginStream IFURLHandleResourceDidCancelLoading:]):
	(-[IFPluginStream IFURLHandle:resourceDidFailLoadingWithResult:]):
	(-[IFPluginStream IFURLHandle:didRedirectToURL:]):
	* Plugins.subproj/IFPluginView.mm:
	(-[IFPluginView start]):
	(-[IFPluginView layout]):

2002-06-18  Chris Blumenberg  <cblu@apple.com>

	Enabled the viewing of plug-in content inline
	(aka direct links to plugin media). Made IFPluginView a
	IFDocumentView and IFPluginStream a IFDocumentRespresentation.

	Renamed content policy API's to include the data source.

	* Plugins.subproj/IFPluginDatabase.h:
	* Plugins.subproj/IFPluginDatabase.m:
	(+[IFPluginDatabase installedPlugins]): registers plugins as IFDocument*
	* Plugins.subproj/IFPluginStream.h:
	* Plugins.subproj/IFPluginStream.mm:
	(-[IFPluginStream init]): added for IFDocumentRepresentation
	(-[IFPluginStream initWithURL:pluginPointer:notifyData:attributes:]): removed load initiliazatoin
	(-[IFPluginStream dealloc]):
	(-[IFPluginStream startLoad]): added
	(-[IFPluginStream stop]):
	(-[IFPluginStream receivedData:]): added as the base implementation
	(-[IFPluginStream receivedError]): added as the base implementation
	(-[IFPluginStream finishedLoadingWithData:]): added as the base implementation
	(-[IFPluginStream receivedData:withDataSource:]): added for IFDocumentRepresentation